<resources>
    <string name="app_name">mari</string>
    <string name="app_description">tu asistente de salud</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="tienes_cuenta">¿Tienes cuenta?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate.</string>
    <string name="inicia_sesion">Inicia sesión.</string>
    <string name="entrar">Entrar</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="profile">Perfil</string>
    <string name="metas">Metas</string>
    <string name="como_te_sientes">¿Como te sientes?</string>
    <string name="inicio">Inicio</string>
    <string name="text">Text</string>
    <string name="buscar">Buscar...</string>
    <string name="herida_abierta">Herida abierta</string>
    <string name="heimlich">Maniobra Heimlich</string>
    <string name="rcp">Reanimación cardiopulmonar (RCP)</string>
    <string name="medicina">Medicina</string>
    <string name="enfermedad">Enfermedad</string>
    <string name="guardados">Guardados</string>
    <string name="historial">Historial</string>
    <string name="diccionario">Diccionario</string>
    <string name="buscar_diccionarios">Buscar</string>
    <string name="emergencia">Emergencia</string>
    <string name="como_te_sientes_hoy">¿Cómo te sientes hoy?</string>
    <string name="fecha_jueves_25">Jueves 25 de marzo</string>
    <string name="calendario">Calendario</string>
    <string name="estatura_estiloVida">Estatura</string>
    <string name="peso_estiloVida">Peso</string>
    <string name="consejo_diario">Consejo diario</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="ajustes_estilo_vida">Ajustes de estilo de vida</string>
    <string name="mis_metas">Mis metas</string>
    <string name="aniadir_metas">Añadir</string>
    <string name="editor_de_metas">Editor de metas</string>
    <string name="escribir_meta">Escribir meta</string>
    <string name="editar_metas">Editar metas</string>
    <string name="titulo_diccionario">Título del diccionario</string>
    <string name="cerrar_sesion_profile">Cerrar sesión</string>
    <string name="escribeUnaNota_metas">Escribe una nota</string>
    <string name="editar">Editar</string>
    <string name="duplicar">Duplicar</string>
    <string name="borrar">Borrar</string>
    <string name="consejo_diario_como_te_sientes">Manten tu organismo hidratado: se recomienda beber diariamente dos litros de agua.
        Beber agua te ayuda a eliminar toxinas, ayuda en la digestión y evita el estreñimiento.</string>
    <string name="necesito_ayuda">Necesito ayuda</string>
    <string name="botiquin_emergencia">Botiquín de emergencia</string>
    <string name="numeros_emergencia">Números de emergencia</string>
    <string name="hospitales_cercanos">Hospitales cercanos</string>
    <string name="farmacias_cercanas">Farmacias cercanas</string>
    <string name="necesito_atencion">Necesito atención</string>
    <string name="estado_animo">Estado de ánimo</string>
    <string name="sintomas">Síntomas</string>
    <string name="tiempo_sueño">Tiempo normal de sueño</string>
    <string name="la_mayoria_personas">La mayoría de las personas...</string>
    <string name="consumo_de_agua">Consumo de agua</string>
    <string name="Tiempo_de_sueño">Tiempo de sueño</string>
    <string name="hoy_me_siento">Hoy me siento</string>
    <string name="fecha_hoySiento">25 de marzo</string>
    <!-- estados de animo-->
    <string name="feliz">Feliz</string>
    <string name="calmado">Calmado</string>
    <string name="activo">Activo</string>
    <string name="triste">Triste</string>
    <string name="irritado">Irritado</string>
    <string name="ansioso">Ansias</string>
    <!--Sintomas-->
    <string name="dolor_cabeza">Dolor <br /> de <br />cabeza</string>
    <string name="Insomnio">insomnio</string>
    <string name="diarrea">Diarrea</string>
    <string name="gripe">Gripe</string>
    <string name="tos">Tos</string>
    <string name="dolor_garganta">Dolor <br /> de <br />gar-ganta</string>
    <string name="persnalizado">Personalizado</string>
    <string name="notas">Notas</string>
    <string name="mis_estados">Mis estados</string>
    <string name="escribir_estado">Escribir estado</string>
    <string name="editor_estados">Editor estados</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
    <string name="ingresa_nota_sintoma">Ingresa un síntoma o una nota</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellido</string>

</resources>