<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/perfil_48x48_mdpi"
        android:iconTint="@color/transparent"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_metas"
        android:icon="@mipmap/metas_48x48_mdpi"
        android:title="@string/metas" />

    <item
        android:id="@+id/navigation_como_sientes"
        android:icon="@mipmap/feliz_48x48_mdpi"
        android:title="@string/inicio" />
    <item
        android:id="@+id/navigation_diccionario"
        android:icon="@mipmap/busqueda_48x48_mdpi"
        android:title="@string/buscar_diccionarios" />
    <item
        android:id="@+id/navigation_emergencia"
        android:icon="@mipmap/emergencia_48x48_mdpi"
        android:title="@string/emergencia" />
</menu>