<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="110sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textSize="100sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/app_description"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingTop="100dp"
        android:background="@drawable/rounded_white_card"
        android:layout_weight="90">
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColorHint="@color/dark_foreground"
            android:textColor="@color/dark_foreground"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_light_purple"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColorHint="@color/dark_foreground"
            android:textColor="@color/dark_foreground"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_light_purple"/>
        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/crear_cuenta"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/rounded_purple_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="200dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_foreground"
                android:textSize="25sp"
                android:text="@string/tienes_cuenta"/>
            <TextView
                android:id="@+id/tvIniciaSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_foreground"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:text="@string/inicia_sesion"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>