<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="110sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textSize="100sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/app_description"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/rounded_purple_button"/>
        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/crear_cuenta"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:textColor="@color/purple_mari"
            android:background="@drawable/rounded_white_button"/>

    </LinearLayout>
</LinearLayout>