<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.como_sientes.MeSientoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back_hoySiento"
            android:layout_width="65dp"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hoy_me_siento"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_white_card"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_fecha_hoySiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_hoySiento"
            android:textAlignment="center"
            android:textColor="@color/dark_foreground"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_estadoAnimo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/estado_animo"
            android:textAlignment="center"
            android:textColor="@color/light_foreground"
            android:textSize="22sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_feliz_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/feliz_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feliz"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_calmado_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/calmado_36x36_ldpi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calmado"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_activo_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/activo_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activo"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_triste_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/triste_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/triste"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_irritado_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/irritado_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/irritado"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_ansioso_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/ansioso_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ansioso"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_sintomas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sintomas"
            android:textAlignment="center"
            android:textColor="@color/light_foreground"
            android:textSize="22sp"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_dolorCabeza_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/dolorcabeza_48x48_mdpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3"
                        android:textAlignment="center"
                        android:text="@string/dolor_cabeza"
                        android:textColor="@color/light_foreground" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_insomnio_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/insomnio_36x36_ldpi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Insomnio"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_diarrea_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/diarrea_36x36_ldpi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/diarrea"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_gripe_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/gripe_36x36_ldpi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/gripe"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_tos_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/tos_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tos"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="40dp"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/btn_dolorGarganta_hoyMeSiento"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@mipmap/dolorgarganta_36x36_ldpi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="3"
                        android:text="@string/dolor_garganta"
                        android:textAlignment="center"
                        android:textColor="@color/light_foreground" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/tv_personalizado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/persnalizado"
            android:textAlignment="center"
            android:textColor="@color/light_foreground"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_estados"
                android:dividerHeight="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytAniadirEstado"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_log_out_background"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_weight="3"
                android:text="@string/aniadir_metas"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/metas"
                android:src="@drawable/ic_add" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/notas"
            android:textAlignment="center"
            android:textColor="@color/light_foreground"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNota"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/ingresa_nota_sintoma"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColorHint="@color/dark_foreground"
            android:textColor="@color/dark_foreground"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_light_purple"/>
    </LinearLayout>
</LinearLayout>